# project-a

./: .dockerignore  .env.example  .gitignore  ADDITIONAL_PLAN.md  README.md  RELEASE.md  docker-compose.yml  jumpdesktop  power_automate_form.json  pyproject.toml
backend/app/: config.py  main.py  timezone.py
backend/app/agents/: ansible_agent.py  base.py  inventory_agent.py  inventory_tool.py  k8s_agent.py  kubevirt_agent.py  registry.py  system_agents.py  vcenter_agent.py
backend/app/api/: agent_logs.py  agent_records.py  agents.py  auth.py  chat.py  debug.py  inventory.py  jobs.py  k8s_collector.py  notices.py  prompt_debug.py  release.py  signup.py  teams_inbound_debug.py  token_usage.py  users.py  whatap_webhook.py
backend/app/db/: __init__.py  agents.py  bands.py  database.py  inventory_records.py  inventory_table_import.py  inventory_table_query.py  job_datetime.py  jobs.py  k8s_inventory.py  notice_board.py  notifications.py  roles.py  schema.sql  seed.py  signup_notifications.py  users.py
backend/app/llm/: factory.py
backend/app/logging/: __init__.py  agent_logger.py  prompt_debug.py  user_comm_logger.py
backend/app/mcp/: client.py  (+1 more)
config/: mcp_servers.yaml  settings.yaml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf.template
docs/: BACKEND_AGENT_INTERFACE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/plugins/: accessLog.ts
frontend/src/: App.tsx  index.css
llm_model/: README.md
scripts/: docker-build-local.sh  docker-build-push.sh
(+89 files in other folders)
