[project]
name = "project-a"
version = "0.1.0"
description = "LangGraph multi-agent platform for K8s, KubeVirt, and vCenter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jaydebeapi>=1.2.3",
    "jpype1>=1.7.1",
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "openshift>=0.13.2",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.50.2",
]

[project.scripts]
project-a-api = "backend.app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = ["backend", "config", "llm_model"]
